--- a/package.json
+++ b/package.json
@@ -16,24 +16,27 @@
 		"dist"
 	],
 	"dependencies": {
-		"ink": "^4.1.0",
-		"meow": "^11.0.0",
-		"react": "^18.2.0"
+		"@mistralai/mistralai": "^1.7.1",
+		"ink": "^5.2.1",
+		"ink-text-input": "^6.0.0",
+		"keytar": "^7.9.0",
+		"meow": "^13.2.0",
+		"react": "^18.3.1"
 	},
 	"devDependencies": {
-		"@sindresorhus/tsconfig": "^3.0.1",
-		"@types/react": "^18.0.32",
+		"@sindresorhus/tsconfig": "^7.0.0",
+		"@types/react": "^18.3.1",
 		"@vdemedes/prettier-config": "^2.0.1",
-		"ava": "^5.2.0",
-		"chalk": "^5.2.0",
-		"eslint-config-xo-react": "^0.27.0",
-		"eslint-plugin-react": "^7.32.2",
-		"eslint-plugin-react-hooks": "^4.6.0",
-		"ink-testing-library": "^3.0.0",
-		"prettier": "^2.8.7",
+		"ava": "^6.3.0",
+		"chalk": "^5.4.1",
+		"eslint-config-xo-react": "^0.28.0",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"ink-testing-library": "^4.0.0",
+		"prettier": "^3.5.3",
 		"ts-node": "^10.9.1",
-		"typescript": "^5.0.3",
-		"xo": "^0.53.1"
+		"typescript": "^5.8.3",
+		"xo": "^1.0.0"
 	},
 	"ava": {
 		"extensions": {
