--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
 		]
 	},
 	"xo": {
-		"extends": "xo-react",
+		"react": true,
 		"prettier": true,
+		"semicolon": true,
 		"rules": {
 			"react/prop-types": "off"
 		}
