--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"ink": "^5.2.1",
 		"ink-text-input": "^6.0.0",
 		"keytar": "^7.9.0",
+		"marked": "^15.0.12",
+		"marked-terminal": "^7.3.0",
 		"meow": "^13.2.0",
 		"minimatch": "^10.0.1",
 		"react": "^18.3.1",
@@ -31,6 +33,7 @@
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^7.0.0",
 		"@types/diff": "^7.0.2",
+		"@types/marked-terminal": "^6.1.1",
 		"@types/minimatch": "^5.1.2",
 		"@types/node": "^22.15.30",
 		"@types/react": "^18.3.1",
