--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^7.0.0",
+		"@swc-node/register": "^1.10.10",
 		"@types/diff": "^7.0.2",
 		"@types/marked-terminal": "^6.1.1",
 		"@types/minimatch": "^5.1.2",
@@ -46,7 +47,6 @@
 		"ink-testing-library": "^4.0.0",
 		"prettier": "^3.5.3",
 		"ts-node": "^10.9.1",
-		"tsimp": "^2.0.12",
 		"typescript": "^5.8.3",
 		"xo": "^1.0.0"
 	},
@@ -56,7 +56,8 @@
 			"tsx": "module"
 		},
 		"nodeArguments": [
-			"--import=tsimp"
+			"--no-warnings",
+			"--loader=@swc-node/register/esm"
 		]
 	},
 	"xo": {
