--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"diff": "^8.0.2",
 		"glob": "^11.0.2",
 		"ink": "^5.2.1",
+		"ink-select-input": "^6.2.0",
 		"ink-text-input": "^6.0.0",
 		"keytar": "^7.9.0",
 		"marked": "^15.0.12",
