--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "tsc --watch",
-		"test": "prettier --check . && xo && ava"
+		"test": "prettier --check . && xo && ava",
+		"fix": "prettier --write . && xo --fix"
 	},
 	"files": [
 		"dist"
