--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"dependencies": {
 		"@mistralai/mistralai": "^1.7.1",
 		"@modelcontextprotocol/sdk": "^1.12.1",
+		"commander": "^14.0.0",
 		"diff": "^8.0.2",
 		"glob": "^11.0.2",
 		"ink": "^5.2.1",
@@ -33,7 +34,6 @@
 		"keytar": "^7.9.0",
 		"marked": "^15.0.12",
 		"marked-terminal": "^7.3.0",
-		"meow": "^13.2.0",
 		"minimatch": "^10.0.1",
 		"react": "^18.3.1",
 		"zod-to-json-schema": "^3.24.5"
