--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "mistrado",
-	"version": "0.1.0",
+	"description": "Mistrado is a terminal-based coding assistant, purpose-built for Mistral AI models.",
+	"version": "0.2.0",
 	"license": "MIT",
 	"bin": {
 		"mistrado": "dist/cli.js"
@@ -76,5 +77,12 @@
 			"react/prop-types": "off"
 		}
 	},
-	"prettier": "@vdemedes/prettier-config"
+	"prettier": "@vdemedes/prettier-config",
+	"keywords": [
+		"mistral",
+		"cli",
+		"ai",
+		"coding",
+		"agent"
+	]
 }
