--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^7.0.0",
 		"@swc-node/register": "^1.10.10",
+		"@swc/core": "^1.13.3",
 		"@types/diff": "^7.0.2",
 		"@types/marked-terminal": "^6.1.1",
 		"@types/minimatch": "^5.1.2",
